Fix CSS rules that make cursor invisible in unfocused inline editor

--- a/src/styles/brackets_codemirror_override.less
+++ b/src/styles/brackets_codemirror_override.less
@@ -123,10 +123,10 @@
         background-color: @background-color-1;
     }
 
-    .CodeMirror pre.CodeMirror-cursor {
+    .CodeMirror .CodeMirror-cursor {
         visibility: hidden;
     }
-    .CodeMirror.CodeMirror-focused pre.CodeMirror-cursor {
+    .CodeMirror.CodeMirror-focused .CodeMirror-cursor {
         visibility: visible;
     }
     
